@@ -10,6 +10,9 @@ all changes without author attribution are by Doug MacEachern
 
 =item 1.22_01-dev
 
+User/Group for 'make test' can be overridden with the environment
+variables APACHE_USER/APACHE_GROUP
+
 fix PerlSetVar inheritance bug
 [Sander van Zoest <sander@vanzoest.com>]
 
